test/TestSuite/Scheduler/Errors/task_overspecified_3.tjp
project test "Test" "1.0" 2008-02-03 +1m

task m "M" {
  end ${projectstart}
}

# MARK: error 8 task_overspecified
task t "T" {
  precedes !m
  length 2d
  start 2008-02-03
  scheduling alap
}

